--- a/_posts/2018-10-07-Numworks.md
+++ b/_posts/2018-10-07-Numworks.md
@@ -50,7 +50,7 @@ tags: c++, python, embedded, calculator, numworks
 
 ## MicroPython
 
-micro python を搭載している。iPython のような対話コンソール、数学ライブラリやグラフィックライブラリも搭載しているので単体でもいろいろと遊ぶことが出来る。しかし、[alpha]シフトを毎回押さなければ英字入力ができないのが面倒だ。
+micro python を搭載している。iPython のような対話コンソール、数学ライブラリやグラフィックライブラリも搭載しているので単体でもいろいろと遊ぶことが出来る。しかし、[alpha]シフトを毎回押さなければ英字入力ができないのが面倒だ。一番上の段の右から2番目、ツールボックス機能で関数を選べる(先頭文字でサーチ可能)のが少しの助けになる。
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Xim84ABuVik" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
