--- a/_posts/2018-10-07-Numworks.md
+++ b/_posts/2018-10-07-Numworks.md
@@ -2,7 +2,7 @@
 layout: post
 title: NumWorksの電卓
 category: blog
-tags: c++, python, embedded, calculator, numworks
+tags: c++ python embedded calculator numworks
 ---
 
 [NumWorks](https://www.numworks.com/features/)というフランスのメーカが、新しい電卓を発売した。
