Doc and Draft update.

--- a/_posts/2019-04-28-Gdb-basic.md
+++ b/_posts/2019-04-28-Gdb-basic.md
@@ -5,7 +5,9 @@ category: blog
 tags: gdb c assembler
 ---
 
-最近、コンパイラを作ろうとチャレンジしている。コンパイラは基本的にアセンブラコードを出力する。その結果が意図通りに動いてテストに通れば良いが、開発中はそうならない。このアセンブラ出力が意図どおりかどうかをデバッグすることになる。ただし、コンパイラが自作でヘボいのでアセンブラ出力は、ソースコードデバッグができない。デバッグ情報が無い実行ファイルをデバッグするのと同じ状況になる。そんな状況でよく使う gdb コマンドをまとめた。あんまり細工していない、素のgdbコマンドを使う助けになると思う。組み込みRustを書いていた時も、ターゲットにビルドされたバイナリを解析するために、素のgdbを使うことになった。そういう時にも gdb の使い方は役に立つ知識となる。
+最近、コンパイラを作ろうとチャレンジしている。コンパイラは基本的にアセンブラコードを出力する。その結果が意図通りに動いてテストに通れば良いが、開発中はそうならない。このアセンブラ出力が意図どおりかどうかをデバッグすることになる。ただし、コンパイラが自作でヘボいので、それが出力するアセンブラは、ソースコードデバッグができない。デバッグ情報が無い実行ファイルをデバッグするのと同じ状況になる。そんな状況でよく使う gdb コマンドをまとめた。あんまり細工していない、素のgdbコマンドを使う助けになると思う。
+
+組み込みRustを書いていた時も、ターゲットにビルドされたバイナリを解析するために、素のgdbを使うことになった。そのような時にも gdb の使い方は役に立つ知識となる。
 
 # 起動
 
@@ -17,8 +19,8 @@ $ gdb target_executable
 # ターゲットプログラムの実行
 
 * `(gdb) run` ターゲットプログラムを実行する。
-* `(gdb) run -option arg` コマンドライン引数を付けたい時
-* `(gdb) start` 実行を開始して `main()`でブレーク。
+* `(gdb) run arg1 arg2` コマンドライン引数を付けたい時。`target arg1 arg2`を実行しているのと々状態になる。
+* `(gdb) start` 実行を再開して `main()`でブレーク。
 * `(gdb) c` continue. 実行継続。
 
 ## OpenOCDを使ったリモートでバッグ
@@ -44,7 +46,7 @@ $ gdb target_executable
 
 # ブレークポイント
 
-* `(gdb) break <関数名>`
+* `(gdb) b <関数名>` `break` と々。
 * `(gdb) b *<関数名>+0x12` 関数名+オフセット
 * `(gdb) b *0x040022` アドレス
 * `(gdb) i b` `info break point` 現在のブレークポイントを表示
@@ -55,6 +57,8 @@ $ gdb target_executable
 * `(gdb) i r` `(gdb) info register` レジスタ値を表示。
 * `(gdb) disas` ディスアセンブラ表示。
 * `(gdb) bt` backtrace。関数呼び出しのスタックを表示。突然死んだ時に、どのような呼び出しで死んだかがわかる。
+
+通常、バグがあると SEGV などで死ぬので、まずはデバッガ上でロードして(`gdb target_program`)して、実行し(`run`)、死んだら、`bt`でどんな呼び出しで死んだのかを把握する。そこで適切なブレークポイントを設定して(`b`)、再実行し(`start`)、レジスタ`i r`、メモリ表示`x/????`、ステップ実行(`si`)でバグを発生している箇所を追い詰める、というのが通常の手順だろう。
 
 ## メモリ内容の表示
 
