--- a/_posts/2019-06-09-Compiler.md
+++ b/_posts/2019-06-09-Compiler.md
@@ -25,7 +25,7 @@ tags: c compiler
     ドラゴンブックとして知られる、コンパイラ関係の教科書。もちろん、私は読み始めたけど完走できなかった。しかし、それ以外のもっと薄いテキストには何冊かトライして、構文解析のところは理解できていると思っている。
 
 * [実用Cプログラミング](http://park11.wakwak.com/~nkon/misc/book/born_to_code_in_c.html)
-    昔の本で、今は手に入りにくいが、思い入れがあるのでリストアップ。この本の中でCのインタプリタを実装している。構文解析は手書きの再帰下降。インタプリタなのでコード生成関係のところは解説されていない。しかし、プログラミング初心者のころにコンパイラの実装に初めて触れて「自分でも作れるんだ」と思った。そう、作れるのだ。
+    昔の本で、今は手に入りにくいが、思い入れがあるのでリストアップ。この本の中でCのインタプリタを実装している。構文解析は手書きの再帰下降。インタプリタなのでコード生成関係のところは解説されていない。しかし、プログラミング初心者のころにコンパイラの実装にはじめて触れて「自分でも作れるんだ」と思った。そう、作れるのだ。
 
 
 # 開発手法
@@ -36,30 +36,32 @@ tags: c compiler
 
 フォーマルな開発手法では、仕様が会議などで定められ、仕様書ができたら開発が始まる。それは間違いだ。プログラムの機能や仕様は実装と密接に関係する。どんなに優秀なプログラマでも実装せずに仕様を確定すれば落とし穴や見落としがあるものだ。
 
-拡張に拡張をかさねれば、スパゲッティでメンテナンス不能なプログラムになる恐れがある。しかし、機能を拡張していくときに、パッチ当てではなく、その時点で必要な構造化設計・抽象化を随時進めれば、スパゲッテイになることはない。また、モジュール化、リファクタリングをするのに絶対必要なツールが自動化されたテストだ。つまり、拡張したらメンテナス不能になるのはテストを支えとしたリファクタリングが出来ないから。短く言えば「テストが無いから」。
+拡張に拡張をかさねれば、スパゲッティでメンテナンス不能なプログラムになる恐れがある。しかし、機能を拡張していくときに、パッチ当てではなくその時点で必要な構造化設計・抽象化を随時進めれば、スパゲッテイになることはない。また、モジュール化、リファクタリングをするのに絶対必要なツールが自動化されたテストだ。つまり、拡張したらメンテナス不能になるのはテストを支えとしたリファクタリングが出来ないから。短く言えば「テストが無いから」。
 
-最初は、定数を出力するだけのコンパイラを作り、それが電卓レベルの式をコンパイルできるコンパイラになり、条件分岐、関数呼び出し、など機能が追加され、最終的には自分自身をコンパイルできるようになる。途中の段階は、機能が少ないC言語に似たコンパイラだが、その範囲で、ちゃんとコンパイラとして動作し、その範囲のテストに通る、ということが最重要ポイントである。
+最初は定数を出力するだけのコンパイラを作り、それが電卓レベルの式をコンパイルできるコンパイラになり、条件分岐・関数呼び出しなど機能が追加され、最終的には自分自身をコンパイルできるようになる。途中の段階は、機能が少ないC言語に似たコンパイラだが、その範囲でちゃんとコンパイラとして動作し、その範囲のテストに通る、ということが最重要ポイントである。
 
 
 ## 自動化されたテスト
 
-現代の若者は、自動化されたテストは当然のものだと考えるだろう。私が最初に自動化テストに触れたのは1995年ごろの Perl コミュニティだ。当時 Perl はPerl4からPerl5変わろうとしていた時代だった。Perl5ではモジュールが導入され、モジュールのリポジトリであるCPAN登録するためには、自動化されたUnitテストが求められたのだ。
+現代の若者は、自動化されたテストは当然のものだと考えるだろう。私が最初に自動化テストに触れたのは1995年ごろのPerlコミュニティだ。当時PerlはPerl4からPerl5変わろうとしていた時代だった。Perl5ではモジュールが導入され、モジュールのリポジトリであるCPAN登録するためには自動化されたUnitテストが求められたのだ。
 
 そこから20年、いまでは自動化されたユニットテストが当たり前だ。導入されていないのは私の勤務先ぐらいなものだろう。
 
 * テストが自動化されていない。→テストは出荷前のリソースを大量投入した状態でしか行われないだろう。そして、テスト漏れと大量のバグが出る。開発者がテストを書き、それをもとに開発するしか、バグは防げない。納期に追われたそのようなテストは、パスすることが目的となり、ザルで無意味なものになることが多い。
 
-* テストを書くヒマが無い。ドキュメントを書くヒマが無い。→テストは実行可能な仕様書であり、自然言語よりも明確で完結だ。最近の言語では「[Docテスト](https://doc.rust-lang.org/rust-by-example/testing/doc_testing.html)」が導入されている。APIの動作をテストコードとしてインラインドキュメント化し、そのドキュメント中のコードが自動実行されるのだ。
+* テストを書くヒマがない。ドキュメントを書くヒマがない。→テストは実行可能な仕様書であり、自然言語よりも明確で完結だ。最近の言語では「[Docテスト](https://doc.rust-lang.org/rust-by-example/testing/doc_testing.html)」が導入されている。APIの動作をテストコードとしてインラインドキュメント化し、そのドキュメント中のコードが自動実行されるのだ。
 
 * テストの書き方がよくわからない。→テストツールを導入すると学習コストがかかる。Rust などの現代的な言語ではテストが言語仕様に含まれているので迷いは無いはずだ。Cなどの古い言語でテストを実行するにはノウハウが必要だが、まずはカバレッジにこだわらず、とにかく自動実行することを考えよう。CppUTestは、機能は少ないが移植性は良く、良い選択しだと思う。テストが書ける=入出力が明確になっている、ということでもある。
 
 * テストをパスしているはずなのにバグが出た。→バグを再現するための最小構成のテストを書こう。最小構成のテストはシンプルなので、製品本体のコードをデバッグするよりもデバッグ時間の短縮にも役立つ。一度書いたテストは自動実行され、エンバグ・デグレを防ぐ。やってみるとわかるが、一箇所を修正したら他のテストが落ちるというデグレは、しばしば生じる。過去のバグ修正の蓄積である自動化テストが無ければ、どうやってデグレを防ぐというのだろうか。
 
+* それと同時に自動化されたビルドも大事。make 一発、Makefile が嫌いなら、代替となるビルドシステムやスクリプトでビルドできるのが望ましい。IDEのビルドボタンではIDEの微妙な設定の影響が入ってしまう恐れがある。
+
 ## 最初は正常系のみ
 
 通常のプログラムではAPIを呼んだ時は返り値をチェックしてエラーならば対処しなければならない。しかし、コンパイラというプログラムの特性上、入力がエラーだったらそれ以上のコンパイルは継続できないので、異常終了するのみだ。わかりやすいエラーメッセージが出せればなお良い(最近のコンパイラは、この方面の進歩が著しい)。
 
-メモリ確保における、free しない、という設計も、コンパイラではうまくいく。
+メモリ確保における free しない、という設計も、コンパイラではうまくいく。
 
 当然、ユーザとのインタラクティブな操作を伴うGUIプログラムやサーバプログラムは、きちんとエラーチェックを行わなければならない。
 
@@ -67,11 +69,11 @@ tags: c compiler
 
 これも現代では当然だろう。開発していると、どうにもこうにもうまく行かなくなることは良くある。そのときに、むかし動いていたところまでサクッと戻れることは、とても安心できる。
 
-そういった変更履歴をきちんとトレースして、バグが出た時にいつでも任意の地点に戻れるようにするためにも、Git のようなツールを活用することは必要だ。ファイルの先頭に変更ログをコメントしておくような粗さでは、後からの役に立たない。
+そういった変更履歴をきちんとトレースして、バグが出た時にいつでも任意の地点に戻れるようにするためにも、Git のようなツールを活用することは必要だ。ファイルの先頭に変更ログをコメントしておくような粗さでは、後からの役に立たない。変更履歴はGitが管理するものでファイルコメントが管理するものでは無い。現代ではGitにチェックインされていないソースコードはありえないのだから、適材適所でいこう。
 
 # セルフホスト
 
-通常、自分で書いたコンパイラのコードは、gccでコンパイルされる。このコンパイラは通常、stage1コンパイラと呼ばれる。当然、stage1コンパイラはテストコード(C言語)を正しくコンパイルして、できた実行ファイルは正常に実行されなければならない。これは stage1テストと呼ばれる。stage1コンパイラは、アルゴリズムは自作、ただしgccでコード生成された。
+通常、自分で書いたコンパイラのコードは、gccでコンパイルされる。このコンパイラは通常、stage1コンパイラと呼ばれる。当然、stage1コンパイラはテストコード(C言語)を正しくコンパイルして、できた実行ファイルは正常に実行されなければならない。これは stage1テストと呼ばれる。stage1コンパイラは、アルゴリズムは自作、ただしgccでコード生成されている。
 
 ![../images/compiler-stage.png](../images/compiler-stage.png)
 
@@ -101,7 +103,7 @@ gdbの使い方については、別記事にまとめた。
 
 今回のコンパイラは中間コード方式であり、中間コードのダンプ機能が付いているので、それもデバッグの見通し付けに大変役にたった。
 
-## 例1: コード生成のバグ(インストラクションの仕様)
+## 例1: コード生成のバグ(命令の仕様)
 
 今回作成したコンパイラはCを読み込んでアセンブラを出力する。その出力にバグがあると、次のステージのコンパイラが正しく動かない。遭遇した例では、比較命令に関するもの。`==`や`>=`などのCの比較演算子はアセンブラでは主に`cmp`命令として実装される。テストケースには正の数の比較だけ書いてあったので、テストはパスしたのだが、コンパイラのソースコード中に負の数と比較する比較演算子を用いていた。実は、`cmp`命令のオペランドのビット幅によっては必要なまでに拡張され、その拡張が**符号拡張ではなくたんにゼロ埋め拡張**なのだ。
 
