--- a/_posts/2019-01-19-Fish.md
+++ b/_posts/2019-01-19-Fish.md
@@ -67,6 +67,8 @@ curl https://git.io/fisher --create-dirs -sLo ~/.config/fish/functions/fisher.fi
 
 パッケージを追加するなどのメンテナスは `fisher`コマンドでできる。パッケージ類は、[oh-my-fish](https://github.com/oh-my-fish/oh-my-fish)にまとまっている。この名前からしても、zsh を強く意識しているのがわかるだろう。
 
+	ちなみに、英語で良く言われるフレーズに "oh my god" というものがある。しかし「God の名を日常的に口にするのは良くない(恐れ多い)」ということから、とくに女性が良く使う"oh my gosh"という、より柔らかい表現が派生した。"oh my zsh"はそこから派生しており、"oh my fish"はさらに派生している。
+
 [テーマ一覧](https://github.com/oh-my-fish/oh-my-fish/blob/master/docs/Themes.md)から画像を見ながら好みのテーマを決めて、次のようにインストールできる。
 
 ```bash
