--- a/_posts/2019-04-28-Gdb-basic.md
+++ b/_posts/2019-04-28-Gdb-basic.md
@@ -19,7 +19,7 @@ $ gdb target_executable
 # ターゲットプログラムの実行
 
 * `(gdb) run` ターゲットプログラムを実行する。
-* `(gdb) run arg1 arg2` コマンドライン引数を付けたい時。`target arg1 arg2`を実行しているのと々状態になる。
+* `(gdb) run arg1 arg2` コマンドライン引数を付けたい時。`target arg1 arg2`を実行しているのと同じ状態になる。
 * `(gdb) start` 実行を再開して `main()`でブレーク。
 * `(gdb) c` continue. 実行継続。
 
