--- a/_posts/2022-09-24-Dotfiles.md
+++ b/_posts/2022-09-24-Dotfiles.md
@@ -35,6 +35,16 @@ tags: github dotfiles linux mac wsl
 * 補完は[zsh-autosuggestions](https://github.com/zsh-users/zsh-autosuggestions)に任せる。個人ではHACKしない。インストールはスクリプトで自動的に行う。
 
 ```sh
+## History
+export HISTFILE=${HOME}/.local/state/zsh_history
+HISTSIZE=10000
+SAVEHIST=10000
+setopt share_history
+setopt hist_ignore_dups
+setopt hist_no_store
+setopt hist_reduce_blanks
+setopt hist_ignore_space
+
 ## Path
 ## 個人のスクリプトは XDG 的に ~/.local/bin/ に入れる
 export PATH=$PATH:$HOME/.local/bin
