--- a/_posts/2022-09-24-Dotfiles.md
+++ b/_posts/2022-09-24-Dotfiles.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 設定ファイルをGitHubに置く
+title: 設定ファイルをGitHubに置く(Dotfiles)
 category: blog
 tags: github dotfiles linux mac wsl
 ---
