--- a/_posts/2022-09-24-Dotfiles.md
+++ b/_posts/2022-09-24-Dotfiles.md
@@ -53,6 +53,14 @@ export PATH=$PATH:$HOME/.local/bin
 alias ls='ls -FG '
 ```
 
+### XDG Base Directory
+
+日本語の解説は例によって[ArchLinuxがわかりやすい](https://wiki.archlinux.jp/index.php/XDG_Base_Directory)。
+
+しかし、これはUnix(Linux)の流儀で、Windows/Macは別の流儀がある。それぞれの流儀の違いは、Rustの[directories-rs](https://github.com/dirs-dev/directories-rs)クレートがわかりやすい。
+
+このdotfilesはクロスプラットフォームを旨としており、基本はLinuxコマンドライン環境なので、XDGの(windows/macではなく)流儀に可能な限り従うようにする。例えば、VS codeの設定ファイルは、Linuxでは`~/.vscode/Code/User/settings.json`だがMacでは`~/Library/Application Support/Code/user/settings.json`。alacurittyの設定ファイルはLinuxでもMacでも`~/.config/alacuritty/alacuritty.yml`
+
 ## vim
 
 * zshと同様に、メンテナンスする個人設定は`vimrc.pref`に分離しておいて、`~/.vimrc`から読み込む。
