--- a/_posts/2022-10-26-Lima.md
+++ b/_posts/2022-10-26-Lima.md
@@ -5,7 +5,7 @@ category: blog
 tags: linux mac x86
 ---
 
-別記事にあるように『[低レベルプログラミング]()』という本を履修。この本はx86_64とUbuntuの環境が前提となっている。今のパソコンはM2 Macbook Air。エミューレーション環境を構築する必要がある。そのような用途にはLimaが好適。インストールは簡単で情報は豊富。この記事は2022年末時点での情報に基づくインストールメモ。
+別記事にあるように『[低レベルプログラミング](https://nkon.github.io/Low-Layer-Programing/)』という本を履修。この本はx86_64とUbuntuの環境が前提となっている。今のパソコンはM2 Macbook Air。エミューレーション環境を構築する必要がある。そのような用途にはLimaが好適。インストールは簡単で情報は豊富。この記事は2022年末時点での情報に基づくインストールメモ。
 
 # Mx Macでの仮想環境
 
