--- a/_posts/2024-06-02-RP2040-Boot2.md
+++ b/_posts/2024-06-02-RP2040-Boot2.md
@@ -11,13 +11,13 @@ tags: rust embedded RasPico bootloader
 
 この記事ではRasPico特有の事情や起動方法、そこで使われるboot2と呼ばれるブートローダの構造について解説する。
 
-後半の記事として、[自作のブートローダを実装するときの工夫](2024-06-03-RP2040-Bootloader2.md)した点について。
+後半の記事として、[自作のブートローダを実装するときの工夫](RP2040-Bootloader2.md)した点について。
 
 また、豆知識的な項目を個別記事としてまとめた。
 
-* [probe-rsの使い方](2024-06-04-ProbeRs.md)
-* [インラインアセンブラ](2024-06-05-Rust-Asm.md) 別文書
-* [UART出力の方法(とくに引数の構成方法)](2024-06-06-Rust-Uart.md) 別記事
+* [probe-rsの使い方](ProbeRs.md)
+* [インラインアセンブラ](Rust-Asm.md) 別文書
+* [UART出力の方法(とくに引数の構成方法)](Rust-Uart.md) 別記事
 
 
 実質的はリポジトリにある開発メモ([NOTE.md](https://github.com/nkon/boot-k/blob/main/NOTE.md))の要約である。開発メモなのでまとまっておらず読みにくいが、細かい点はそちらも参照してほしい。
