--- a/_posts/2024-06-05-Rust-Asm.md
+++ b/_posts/2024-06-05-Rust-Asm.md
@@ -15,7 +15,7 @@ bootloaderのサブ記事だが、独立させておく。
 
 ## bootloaderからアプリケーションのコードにジャンプする
 
-[前編](2024-06-02-RP2040-Boot2.md)でも書いたように、`ldmia`や`msr`などの特殊な命令を使うので、インライン・アセンブラ必須。
+[前編](RP2040-Boot2.md)でも書いたように、`ldmia`や`msr`などの特殊な命令を使うので、インライン・アセンブラ必須。
 
 ```rust
     unsafe {
