--- a/_posts/2024-06-02-RP2040-Bootloader2.md
+++ b/_posts/2024-06-02-RP2040-Bootloader2.md
@@ -6,7 +6,7 @@ tags: rust embedded RasPico bootloader
 ---
 
 
-長くなりすぎたので分割された、前の記事の後半。本記事では自作ブートローダを実装するときに固有の技術について説明する。[前半](/RP2040-Boot2.md)では、RP2040のRustでのテンプレートプロジェクトやboot2 bootloaderについて解説している。
+長くなりすぎたので分割された、前の記事の後半。本記事では自作ブートローダを実装するときに固有の技術について説明する。[前半](/RP2040-Boot2/)では、RP2040のRustでのテンプレートプロジェクトやboot2 bootloaderについて解説している。
 
 実質的に、開発メモ([NOTE.md](https://github.com/nkon/boot-k/blob/main/NOTE.md))の要約である。開発メモなのでまとまっておらず読みにくいが、細かい点はそちらも参照してほしい。
 
@@ -18,9 +18,9 @@ tags: rust embedded RasPico bootloader
 
 汎用的な内容は別記事にまとめた
 
-* [probe-rsの使い方](/ProbeRs.md)
-* [インラインアセンブラ](/Rust-Asm.md) 別文書
-* [UART出力の方法(とくに引数の構成方法)](/Rust-Uart.md) 別記事
+* [probe-rsの使い方](/ProbeRs/)
+* [インラインアセンブラ](/Rust-Asm/) 別文書
+* [UART出力の方法(とくに引数の構成方法)](/Rust-Uart/) 別記事
 
 ## 作りたいブートローダ
 
