--- a/_posts/2024-06-02-Rust-Uart.md
+++ b/_posts/2024-06-02-Rust-Uart.md
@@ -21,7 +21,7 @@ RasPicoにはRTTという文字出力のほうもうもある。
 * `uart.write_full_blocking()`で文字出力ができる。Rustの通常の文字列はUTF-8だが、この引数はバイト列なので`b"..."`を使う
 
 
-```main.rs
+```rust
 /// uart のHALをuseする。fugitは周波数や時刻の演算用ライブラリ
  use rp2040_hal::{
     clocks::{init_clocks_and_plls, Clock},
