--- a/_posts/2024-12-19-Gdb-Memo.md
+++ b/_posts/2024-12-19-Gdb-Memo.md
@@ -25,6 +25,12 @@ OpenOCD serverを起動する。
 
 ## `gdb`
 
+###
+
+今は違うかもしれないが、Apple Silicone のMacでhome-brewを使ってインストールしたとき、このページにあるバグに遭遇したので、[`arm-none-eabi-gdb`](https://formulae.brew.sh/formula/arm-none-eabi-gdb)ではなく[`gcc-arm-embedded`](https://formulae.brew.sh/cask/gcc-arm-embedded)を使っている。ただし、`gcc-arm-embedded`のgdbはpythonが組み込まれていないので[`gdb-dashboard`](https://github.com/cyrus-and/gdb-dashboard)は使えない。
+
+[https://github.com/raspberrypi/pico-feedback/issues/355]
+
 よく使うコマンド
 
 * `monitor reset init`: ターゲットをリセットする
