--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: RustでRTOSを作る(RP2040, Cortex-M0+)
+title: RustでRTOSを作る(RP2040 Cortex-M0+)
 category: blog
 tags: rust embedded RasPico RP2040 RTOS cortex-m
 ---
