--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -618,11 +618,11 @@ fn execute_task(mut sp: u32, regs: u32) -> u32 {
     unsafe {
         asm!(
             "push {{r4, r5, r6}}",       // r7, lr are pushed by prorogue
-            "push {{ {regs} }}",         // save r1
+            "push \{\{ {regs} \}\}",         // save r1
             "ldmia {regs}!, {{r4-r7}}",  // load r4-r7 from backup
             "msr psp, {sp}",
             "svc 0",
-            "pop {{ {regs} }}",
+            "pop \{\{ {regs} \}\}",
             "stmia {regs}!, {{r4-r7}}",  // save r4-r7 to backup
             "mrs {sp}, psp",
             "pop {{r4, r5, r6}}",        // r7, pc are popped by prorogue
