--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -673,7 +673,7 @@ fn execute_task(mut sp: u32, regs: u32) -> u32 {
 * 例外フレームに保存されない`r4-r6`を現在のスタック(=この関数を呼ぶのはカーネルなので、カーネルのスタック)に保存する
 * `r7`, `lr`は関数プレリュードでスタックに`push`されている
 ```rust
-            "push {{ {regs} }}",         // save r1
+            "push \{\{ {regs} \}\}",         // save r1
 ```
 * Cortex-M0+(ARM-v6M)の場合、その後の`ldmia!`命令で`r1`が壊されるので、スタックに保存する
     + `asm!`末尾のパラメータ指定により、`{regs}`は`r1`に展開される 
@@ -696,7 +696,7 @@ fn execute_task(mut sp: u32, regs: u32) -> u32 {
     + 非特権、スレッド、PSPで、引数`sp`で示されたスタック、例外フレームから復帰したレジスタ、レジスタバッファ`regs`でで復帰したレジスタ(PCも含む)、の状態で、指定したタスクが実行される
 * タスク側で`svc`命令が呼ばれたら、再度`SVCall`ハンドラが呼ばれ、`EXC_RETURN`=`0xffff_fff9`によって、ここに実行が戻って来る。
 ```rust
-            "pop {{ {regs} }}",
+            "pop \{\{ {regs} \}\}",
 ```
 * タスクのレジスタ退避バッファのアドレスが入っていた`r1`をスタックから復元する
 ```rust
