--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -672,6 +672,7 @@ fn execute_task(mut sp: u32, regs: u32) -> u32 {
 ```
 * 例外フレームに保存されない`r4-r6`を現在のスタック(=この関数を呼ぶのはカーネルなので、カーネルのスタック)に保存する
 * `r7`, `lr`は関数プレリュードでスタックに`push`されている
+* GitHub Pagesで使っているJekyllの制限により、二重波括弧がエスケープされているが、実際にはエスケープは不要。
 ```rust
             "push \{\{ {regs} \}\}",         // save r1
 ```
