--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -612,6 +612,9 @@ impl<'a> Task<'a> {
 タスクを切り替えるときは、`svc`命令を実行すれば、上述の`SVCall`ハンドラが実行され、タスクが切り替わる。
 
 カーネルから次の関数を呼べば、事前準備を行い、タスクの実行に切り替わり、その実行が終わって戻ってきたときの処理を行う。
+
+GitHub Pagesで使っているJekyllの制限により、二重波括弧がエスケープされているが、実際にはエスケープは不要。
+
 ```rust
 #[inline(never)]
 fn execute_task(mut sp: u32, regs: u32) -> u32 {
@@ -672,7 +675,6 @@ fn execute_task(mut sp: u32, regs: u32) -> u32 {
 ```
 * 例外フレームに保存されない`r4-r6`を現在のスタック(=この関数を呼ぶのはカーネルなので、カーネルのスタック)に保存する
 * `r7`, `lr`は関数プレリュードでスタックに`push`されている
-* GitHub Pagesで使っているJekyllの制限により、二重波括弧がエスケープされているが、実際にはエスケープは不要。
 ```rust
             "push \{\{ {regs} \}\}",         // save r1
 ```
