--- a/_posts/2024-12-23-Rust-Rtos.md
+++ b/_posts/2024-12-23-Rust-Rtos.md
@@ -194,7 +194,7 @@ Cortex-M0のアセンブラ
 
 x86とはことなり、armの場合は、複数のレジスタをまとめてpush/popできる。pushするレジスタはビットマップ形式で表現されており、ビットが立っているレジスタがプッシュされる。
 
-16bitの`push`命令ではレジスタリストに割り当てられたビットは8bitなので、`r0-r7`と`lr`しかpushできない。`r8-r12`をプッシュしたいときは、いったん`r0-r7'にコピーしてからプッシュする必要があり、非常に使い勝手が悪くなる。
+16bitの`push`命令ではレジスタリストに割り当てられたビットは8bitなので、`r0-r7`と`lr`しかpushできない。`r8-r12`をプッシュしたいときは、いったん`r0-r7`にコピーしてからプッシュする必要があり、非常に使い勝手が悪くなる。
 
 しかし、Cortex-M3は32ビットの`push.w`命令がサポートされているので、`push`命令ですべてのレジスタをpushできる。
 
@@ -249,11 +249,15 @@ ARMプロセッサ上での関数呼び出し規約は必修だ。以下はAAPCS
 
 それを使って両方のコアで有効なスピンロックを実装できる。
 
+`cortex-m`フレームワークでは`rp2040_hal`クレートが`sio::spinlock0-31`を提供している。
+
 ### boot2
 
 もうひとつ特徴的なものは`boot2`ブートローダだ。一般的なシステムでは、リセットアドレスからFLASHの先頭にジャンプし、ユーザコードをFLASHの先頭におけば、即座に実行される。
 
 RP2040では、内蔵ROMは、外付けフラッシュの先頭にジャンプするが、そこには`boot2`と呼ばれるブートローダを書き込む。そして、`boot2`がユーザコードを実行する。通常は`boot2`はBSP(Board Support Package)クレートがハンドリングするが、自前で置き換えることもできる([boot-k](https://nkon.github.io/RP2040-Boot2/)プロジェクトを参照)。
+
+上述のように、Cortex-MはVTORによる設定で割り込みベクタをメモリ上の任意の場所に配置できる。しかし`boot2`はFlash上の`0x2000_0100`に割り込みベクタを配置することに注意が必要。
 
 
 ## タスク切換え
