--- a/_posts/2024-06-02-Rust-Asm.md
+++ b/_posts/2024-06-02-Rust-Asm.md
@@ -23,7 +23,7 @@ bootloaderのサブ記事だが、独立させておく。
             "ldr r0, =0x10020100",
             "ldr r1, =0xe000ed08",
             "str r0, [r1]",
-            "ldmia r0, {{r0, r1}}",
+            "ldmia r0, \{\{r0, r1\}\}",
             "msr msp, r0",
             "bx r1",
         );
@@ -31,7 +31,7 @@ bootloaderのサブ記事だが、独立させておく。
 ```
 
 * インライン・アセンブラは`unsafe{}`で囲む。
-* 本体は`asm!()`で囲まれる。`fmt!`的な展開が行われるので、アセンブラとして`{`,`}`が必要なときは`{{`,`}}`とエスケープする。
+* 本体は`asm!()`で囲まれる。`fmt!`的な展開が行われるので、アセンブラとして`{`,`}`が必要なときは`\{\{`,`\}\}`とエスケープする。(GitHubの制限でエスケープ文字が付いているが、実際には、二重波括弧。エスケープは不要)
 * 各行を`"`でくくって書き、コンマでつなげる。
 * 即値は、アセンブラと同様に`=0x12345677`と書く。前述のように、実際のコードでは、即値は別のアドレスに格納され、PC相対参照のコードが生成されるが、それはアセンブラが行う。
 
